<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_inicio"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_inicio"/>
        <item
                android:id="@+id/nav_miMatricula"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_miMatricula"/>
        <item
                android:id="@+id/nav_miExpediente"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_miExpediente"/>
        <item
                android:id="@+id/nav_ajustes"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_ajustes"/>
        <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_salir"/>
    </group>
</menu>