<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistroActivity">

    <Button
            android:text="@string/registro_registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonRegistroRegistrarse"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/registro_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewRegistroFoto"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegistroHacerFoto"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="32dp"/>
    <TextView
            android:text="@string/registro_contrasenia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewRegistroContrasenia"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintBottom_toTopOf="@+id/editTextRegistroContrasenia" android:layout_marginBottom="28dp"/>
    <TextView
            android:text="@string/registro_confirmarContrasenia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewRegistroConfirmarContrasenia"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintBottom_toTopOf="@+id/editTextRegistroConfirmarContrasenia"
            android:layout_marginBottom="28dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextRegistroContrasenia"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintBottom_toTopOf="@+id/textViewRegistroConfirmarContrasenia"
            android:layout_marginBottom="28dp"/>
    <Button
            android:text="@string/registro_seleccionarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonRegistroSeleccionarFoto"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="92dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewRegistroCurso" android:layout_marginBottom="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextRegistroConfirmarContrasenia"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegistroRegistrarse" android:layout_marginBottom="28dp"/>
    <TextView
            android:text="@string/registro_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewRegistroNombre"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11" android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextRegistroNombre" android:layout_marginBottom="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextRegistroEmail"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.182"
            app:layout_constraintBottom_toTopOf="@+id/textViewRegistroFoto" android:layout_marginBottom="48dp"/>
    <Spinner
            android:layout_width="167dp"
            android:layout_height="37dp" android:id="@+id/spinnerRegistroCiclo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/spinnerRegistroCurso"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintBottom_toTopOf="@+id/textViewRegistroContrasenia" android:layout_marginBottom="28dp"/>
    <TextView
            android:text="@string/registro_ciclo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewRegistroCiclo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewRegistroCurso"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintBottom_toTopOf="@+id/spinnerRegistroCiclo" android:layout_marginBottom="28dp"/>
    <TextView
            android:text="@string/registro_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textVieRegistroEmail"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextRegistroEmail"
            app:layout_constraintHorizontal_bias="0.104" android:layout_marginBottom="4dp"/>
    <TextView
            android:text="@string/registro_curso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewRegistroCurso"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="240dp"
            app:layout_constraintBottom_toTopOf="@+id/spinnerRegistroCurso" android:layout_marginBottom="28dp"/>
    <Spinner
            android:layout_width="129dp"
            android:layout_height="39dp" android:id="@+id/spinnerRegistroCurso"
            tools:layout_editor_absoluteY="507dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp"/>
    <EditText
            android:layout_width="442dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextRegistroNombre"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.614"
            app:layout_constraintBottom_toTopOf="@+id/textVieRegistroEmail" android:layout_marginBottom="24dp"/>
    <Button
            android:text="@string/registro_hacerFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonRegistroHacerFoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonRegistroSeleccionarFoto"
            app:layout_constraintBottom_toTopOf="@+id/textViewRegistroCiclo"
            app:layout_constraintHorizontal_bias="0.511" android:layout_marginBottom="76dp"/>
    <TextView
            android:text="@string/registro_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            android:textSize="30sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintBottom_toTopOf="@+id/textViewRegistroNombre"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.498"/>
</androidx.constraintlayout.widget.ConstraintLayout>